--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,5 +8,5 @@ JWT_SECRET=your_jwt_secret_key_here_min_32_chars_long
 PORT=5000
 NODE_ENV=production
 
-# CORS Configuration
-CORS_ORIGIN=https://your-frontend-domain.vercel.app
+# CORS Configuration - Accept multiple frontend origins
+CORS_ORIGIN=https://invoice-frontend.vercel.app,http://localhost:5173,http://localhost:3000
