--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,7 @@
-VITE_API_URL=http://localhost:5000/api
+# Backend API URL Configuration
+# 
+# Local Development:
+# VITE_API_URL=http://localhost:5000/api
+#
+# Production (Deployed):
+VITE_API_URL=https://invoice-0yvu.onrender.com/api
